--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sass": "^2.0.8",
     "gatsby-plugin-sharp": "^2.0.19",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.13",
     "node-sass": "^4.11.0",
